--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,10 +38,13 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  lightbutton: rgb(175, 9, 161)
 );
-
-
+$tabs-background: color($colors,lightbutton);
+$tabs-tab-color-inactive: color($colors,light);
+$tabs-tab-color-active: color($colors,light);
+$toolbar-background: color($colors,lightbutton);
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
@@ -52,7 +55,8 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
+$tabs-md-tab-text-colore: color($colors,light);
+$tabs-md-tab-icon-colore: color($colors,light);
 
 
 
